# stock_master

./: .gitignore  AGENTS.md  DAILY.md  README.md  pyproject.toml
.cursor/plans/: add_sm_suggest_command_4f3471ba.plan.md  sm_suggest_command_66422233.plan.md  sm_suggest_feature_782aeec3.plan.md  sm_suggest_final_777324e0.plan.md  stock-master-architecture_d20b6876.plan.md  stock-master-final-architecture_dfb141a6.plan.md  stock_master_analysis_gaps_c6849d5c.plan.md  stock_master_架构与工作流设计方案_bfb2ffe6.plan.md  stock_master_系统设计_7b38bddf.plan.md  个股研究增强_e2d02145.plan.md  个股调研补强_2b398c2f.plan.md  稳健增值升级方案_d8dada6b.plan.md  股票分析不足诊断_58939284.plan.md  股票调研信息补全_9df50697.plan.md  股票调研深度提升_1d0ed16a.plan.md
.cursor/rules/: research.mdc  stock-master.mdc  trading.mdc
docs/: architecture.md  commands-reference.md  getting-started.md
journal/: portfolio.yaml  watchlist.yaml
journal/entries/: 2026-03-30-buy-002273.md  2026-04-02-buy-03690.md  2026-04-07-share-with-family.md
journal/reviews/: 2026-03-30-002273-review.md
journal/trades/: 2026-03-30-002273-buy.yaml  2026-04-02-03690-buy.yaml  2026-04-08-01810-buy.yaml  2026-04-08-09988-buy.yaml
prompts/: README.md
strategies/: README.md  value-investing.md
tests/: test_alerts.py  test_cli_upgrade.py  test_coverage_new.py  test_cursor_agent.py  test_dossier.py  test_execution_new.py  test_fetcher_new.py  test_guardrails_new.py  test_learning_new.py  test_orchestrator_upgrade.py  test_portfolio_upgrade.py  test_provider_registry.py  test_providers_new.py  test_quantitative_upgrade.py  test_scoring_new.py  test_suggest.py
(+138 files in other folders)
